[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = xmovie/_version.py


[metadata]
name = xmovie
description = Simply create beautiful movies from xarray objects
author = xmovie developers
author_email = jbusecke@princeton.edu
url = https://github.com/jbusecke/xmovie
license = MIT
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Dont change this one
    License :: OSI Approved :: MIT License


[options]
install_requires =
    dask
    matplotlib
    numpy
    xarray
setup_requires=
    setuptools_scm
python_requires = >=3.6

[options.extras_require]
maps =
    cartopy
cftime =
    cftime
    nc-time-axis
prog =
    tqdm
all =
    %(maps)s
    %(cftime)s
    %(prog)s

include_package_data = True
zip_safe = False
packages = find:
