[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E402, E501, E731, W503, E265, F811
exclude = iliketomoveitmoveit/_version.py

[isort]
profile = black
force_to_top = true
default_section = THIRDPARTY
known_first_party = iliketomoveitmoveit
skip =
    docs/conf.py


[metadata]
name = iliketomoveitmovieit
description = Simply create beautiful movies from xarray objects
author = SirMIPsALot
url=https://github.com/jbusecke/iliketomoveitmoveit
license = MIT
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = jbusecke@princeton.edu


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    xarray
    dask
    cartopy
setup_requires=
    setuptools_scm
python_requires = >=3.7
################ Up until here

include_package_data = True
zip_safe = False
packages = find:
