[metadata]
name = xmovie
description = Simply create beautiful movies from xarray objects
author = xmovie developers
author_email = jbusecke@princeton.edu
url = https://github.com/jbusecke/xmovie
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
install_requires =
    matplotlib
    numpy
    xarray
setup_requires =
    setuptools_scm
python_requires = >=3.7
include_package_data = True
zip_safe = False
packages = find:

[options.extras_require]
maps =
    cartopy
parallel =
    dask
cftime =
    cftime
    nc-time-axis
progress = tqdm
all =
    %(maps)s
    %(parallel)s
    %(cftime)s
    %(progress)s


[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E402, E501, E731, W503, E265, F811
exclude = xmovie/_version.py

[isort]
profile = black
force_to_top = true
default_section = THIRDPARTY
known_first_party = xmovie
skip =
    docs/conf.py
